Add support for 2026.2